force-app/main/default/objects/Reference_Core_Payroll__c/Reference_Core_Payroll__c.object-meta.xml
<CustomObject>
    <description>Object used to store additional information for on-boarding Core Payroll.</description>
    <label>Reference Core Payroll</label>
    <nameField>
        <displayFormat>CORE-{000000000}</displayFormat>
        <label>Reference Core Payroll Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference Core Payroll</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>