force-app/main/default/objects/Reference_Core_Payroll__c/fields/Address_Date__c.field-meta.xml
<CustomField>
    <fullName>Address_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Address Submission Date</inlineHelpText>
    <label>Address Submission Date</label>
    <type>Date</type>
</CustomField>