force-app/main/default/objects/Reference_Core_Payroll__c/fields/Address_Status__c.field-meta.xml
<CustomField>
    <fullName>Address_Status__c</fullName>
    <inlineHelpText>Address Submission Status</inlineHelpText>
    <label>Address Submission Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Incomplete/Inaccurate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>