force-app/main/default/objects/Reference_Core_Payroll__c/fields/ASO_Transition_Specialist__c.field-meta.xml
<CustomField>
    <fullName>ASO_Transition_Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ASO Transition Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Reference_Core_Payroll93of</relationshipName>
    <type>Lookup</type>
</CustomField>