force-app/main/default/objects/Reference_Core_Payroll__c/fields/Audit_Submitted_to_Run__c.field-meta.xml
<CustomField>
    <fullName>Audit_Submitted_to_Run__c</fullName>
    <formula>Client_Run_Date__c -  Date_Opened__c</formula>
    <label>Audit Submitted to Run</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>