force-app/main/default/objects/Reference_Core_Payroll__c/fields/Bank_Documentation1__c.field-meta.xml
<CustomField>
    <fullName>Bank_Documentation1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bank Documentation</label>
    <type>Checkbox</type>
</CustomField>