force-app/main/default/objects/Reference_Core_Payroll__c/fields/Bank_Information_Added__c.field-meta.xml
<CustomField>
    <fullName>Bank_Information_Added__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bank Information Added</label>
    <type>Checkbox</type>
</CustomField>