force-app/main/default/objects/Reference_Core_Payroll__c/fields/Billing_Audit_Passed__c.field-meta.xml
<CustomField>
    <fullName>Billing_Audit_Passed__c</fullName>
    <label>Billing Audit Passed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>