force-app/main/default/objects/Reference_Core_Payroll__c/fields/C2C_base_fees_blocked__c.field-meta.xml
<CustomField>
    <fullName>C2C_base_fees_blocked__c</fullName>
    <inlineHelpText>Client-to-Client Relationship is set up to block base fees on multi-id (Block min monthly billing if base fees are waived)</inlineHelpText>
    <label>C2C base fees blocked</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Add&apos;l Audit - Complete</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Incomplete - EFS does not have base fee but fees are not blocked in Core</fullName>
            </value>
            <value>
                <fullName>Incomplete - EFS includes base fee but fees are blocked in Core</fullName>
            </value>
            <value>
                <fullName>Incomplete - Unable to verify due to missing EFS</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>