force-app/main/default/objects/Reference_Core_Payroll__c/fields/Caller_Name__c.field-meta.xml
<CustomField>
    <fullName>Caller_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Caller Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>