force-app/main/default/objects/Reference_Core_Payroll__c/fields/Case_Days_Excluding_Weekends__c.field-meta.xml
<CustomField>
    <fullName>Case_Days_Excluding_Weekends__c</fullName>
    <description>Lookup to Case outstanding Days.  MPSC Exception</description>
    <formula>Case_Lookup__r.Case_Outstanding_Days__c</formula>
    <label>Case Days Excluding Weekends</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>