force-app/main/default/objects/Reference_Core_Payroll__c/fields/Case_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Case_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Lookup</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Reference Core Payroll</relationshipLabel>
    <relationshipName>Reference_Core_Payroll</relationshipName>
    <type>Lookup</type>
</CustomField>