force-app/main/default/objects/Reference_Core_Payroll__c/fields/Class_Code_Assignments__c.field-meta.xml
<CustomField>
    <fullName>Class_Code_Assignments__c</fullName>
    <label>Class Code Assignments</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>Incomplete - Missing scanned doc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>