force-app/main/default/objects/Reference_Core_Payroll__c/fields/Client_Communication_Task_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Client_Communication_Task_Complete_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Client Communication Task Complete Date</label>
    <type>DateTime</type>
</CustomField>