force-app/main/default/objects/Reference_Core_Payroll__c/fields/Client_Load_Received__c.field-meta.xml
<CustomField>
    <fullName>Client_Load_Received__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Client Load Received</label>
    <type>Checkbox</type>
</CustomField>