force-app/main/default/objects/Reference_Core_Payroll__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If more than 5 products are being implemented, list additional products here, separated out by a comma.Refer to the Product 1 dropdown field for the appropriate product names to list in the Comments.</inlineHelpText>
    <label>Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>