force-app/main/default/objects/Reference_Core_Payroll__c/fields/Company_Data_Collection_Task_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Company_Data_Collection_Task_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Company Data Collection Task Start Date</label>
    <type>DateTime</type>
</CustomField>