force-app/main/default/objects/Reference_Core_Payroll__c/fields/Company_Shell_Build__c.field-meta.xml
<CustomField>
    <fullName>Company_Shell_Build__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Company Shell Build</label>
    <type>Checkbox</type>
</CustomField>