force-app/main/default/objects/Reference_Core_Payroll__c/fields/Company_Shell_Build_Minutes_Worked__c.field-meta.xml
<CustomField>
    <fullName>Company_Shell_Build_Minutes_Worked__c</fullName>
    <label>Company Shell Build Minutes Worked</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>