force-app/main/default/objects/Reference_Core_Payroll__c/fields/Current_Quarter_Liabilities_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Current_Quarter_Liabilities_Deposit__c</fullName>
    <label>Current Quarter Liabilities/Deposit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Add&apos;l Audit - Complete</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Incomplete - Missing scanned doc</fullName>
            </value>
            <value>
                <fullName>Incomplete - Some liabilities/deposits, but not all -- scan additional</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>