force-app/main/default/objects/Reference_Core_Payroll__c/fields/Date_Call_Complete__c.field-meta.xml
<CustomField>
    <fullName>Date_Call_Complete__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Call Complete</label>
    <type>Date</type>
</CustomField>