force-app/main/default/objects/Reference_Core_Payroll__c/fields/Date_Credit_Risk_Audit_Completed__c.field-meta.xml
<CustomField>
    <fullName>Date_Credit_Risk_Audit_Completed__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Credit Risk Audit Completed</label>
    <type>Date</type>
</CustomField>