force-app/main/default/objects/Reference_Core_Payroll__c/fields/Date_of_Last_Payroll_Run__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_Payroll_Run__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date of Last Payroll Run</label>
    <type>Date</type>
</CustomField>