force-app/main/default/objects/Reference_Core_Payroll__c/fields/Date_Payroll_BSR_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Date_Payroll_BSR_Assigned__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Payroll BSR Assigned</label>
    <type>Date</type>
</CustomField>