force-app/main/default/objects/Reference_Core_Payroll__c/fields/Days_DC_assigned_to_DocuSign_Sent__c.field-meta.xml
<CustomField>
    <fullName>Days_DC_assigned_to_DocuSign_Sent__c</fullName>
    <formula>CASE(MOD( NBCER_Assigned__c - DATE(1985,6,24),7),
0 , CASE( MOD( Date_DocuSign_Envelope_Sent__c - NBCER_Assigned__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1),
1 , CASE( MOD( Date_DocuSign_Envelope_Sent__c - NBCER_Assigned__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1),
2 , CASE( MOD( Date_DocuSign_Envelope_Sent__c- NBCER_Assigned__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1),
3 , CASE( MOD( Date_DocuSign_Envelope_Sent__c - NBCER_Assigned__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1),
4 , CASE( MOD( Date_DocuSign_Envelope_Sent__c - NBCER_Assigned__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1),
5 , CASE( MOD( Date_DocuSign_Envelope_Sent__c - NBCER_Assigned__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0),
6 , CASE( MOD( Date_DocuSign_Envelope_Sent__c - NBCER_Assigned__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0),
999)
+
(FLOOR(( Date_DocuSign_Envelope_Sent__c - NBCER_Assigned__c )/7)*5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days DC assigned to DocuSign Sent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>