force-app/main/default/objects/Reference_Core_Payroll__c/fields/Days_Since_Date_Client_Load_Received__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Date_Client_Load_Received__c</fullName>
    <formula>( TODAY() - Date_IS_Assigned__c) - 2*(floor((TODAY() - DATE(1985, 6, 24))/7)-floor(( Date_IS_Assigned__c - DATE(1985, 6, 24))/7))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Date Client Load Received</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>