force-app/main/default/objects/Reference_Core_Payroll__c/fields/Days_to_Initial_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Initial_Email_Sent__c</fullName>
    <formula>CASE(MOD( Date_Client_Load_Received__c - DATE(1985,6,24),7), 
  0 , CASE( MOD( Date_IS_Requested__c - Date_Client_Load_Received__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( Date_IS_Requested__c - Date_Client_Load_Received__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( Date_IS_Requested__c - Date_Client_Load_Received__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( Date_IS_Requested__c - Date_Client_Load_Received__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( Date_IS_Requested__c - Date_Client_Load_Received__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( Date_IS_Requested__c - Date_Client_Load_Received__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( Date_IS_Requested__c - Date_Client_Load_Received__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( Date_IS_Requested__c - Date_Client_Load_Received__c )/7)*5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Initial Email Sent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>