force-app/main/default/objects/Reference_Core_Payroll__c/fields/Delivery__c.field-meta.xml
<CustomField>
    <fullName>Delivery__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Delivery</label>
    <type>Date</type>
</CustomField>