force-app/main/default/objects/Reference_Core_Payroll__c/fields/Delivery_Address_Verified_Notes__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Address_Verified_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Delivery Address Verified Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>