force-app/main/default/objects/Reference_Core_Payroll__c/fields/Department_Structure_Inaccurate_Reason__c.field-meta.xml
<CustomField>
    <fullName>Department_Structure_Inaccurate_Reason__c</fullName>
    <description>Department Structure Inaccuracy Reason</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Department Structure Inaccuracy Reason</inlineHelpText>
    <label>Department Structure Inaccurate Reason</label>
    <type>TextArea</type>
</CustomField>