force-app/main/default/objects/Reference_Core_Payroll__c/fields/Doc_Collector__c.field-meta.xml
<CustomField>
    <fullName>Doc_Collector__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Doc Collector</label>
    <length>255</length>
    <type>Text</type>
</CustomField>