force-app/main/default/objects/Reference_Core_Payroll__c/fields/DSA__c.field-meta.xml
<CustomField>
    <fullName>DSA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is populated by a trigger when the object is created. It is populated with the DSA/FSS person on the user record of the Sales Rep. This field is hidden from all page layouts and is used in an Email Alert.</description>
    <label>DSA</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Reference_Core_Payroll9</relationshipName>
    <type>Lookup</type>
</CustomField>