force-app/main/default/objects/Reference_Core_Payroll__c/fields/EFS_with_Discount_Displayed__c.field-meta.xml
<CustomField>
    <fullName>EFS_with_Discount_Displayed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EFS with Discount Displayed</label>
    <type>Checkbox</type>
</CustomField>