force-app/main/default/objects/Reference_Core_Payroll__c/fields/EIP_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>EIP_Bank_Account__c</fullName>
    <label>EIP Bank Account matches bank doc</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Add&apos;l Audit - Complete</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Incomplete - EIP is not set up in Core</fullName>
            </value>
            <value>
                <fullName>Incomplete - Missing Bank Scanned Doc</fullName>
            </value>
            <value>
                <fullName>Incomplete -  Numbers do not match</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>