force-app/main/default/objects/Reference_Core_Payroll__c/fields/ENS_Agreement_Missing_Inaccurate__c.field-meta.xml
<CustomField>
    <fullName>ENS_Agreement_Missing_Inaccurate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ENS Agreement Missing/Inaccurate</label>
    <type>Checkbox</type>
</CustomField>