force-app/main/default/objects/Reference_Core_Payroll__c/fields/Exception_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Exception_Outcome__c</fullName>
    <description>MPSC Exception</description>
    <label>Exception Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>