force-app/main/default/objects/Reference_Core_Payroll__c/fields/Exceptions__c.field-meta.xml
<CustomField>
    <fullName>Exceptions__c</fullName>
    <label>Exceptions</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Add-on</fullName>
            </value>
            <value>
                <fullName>Combo</fullName>
            </value>
            <value>
                <fullName>Documentation</fullName>
            </value>
            <value>
                <fullName>Exception for 1 product but not all</fullName>
            </value>
            <value>
                <fullName>Input Method not Online</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Push</fullName>
            </value>
            <value>
                <fullName>SLA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>