force-app/main/default/objects/Reference_Core_Payroll__c/fields/Federal_Documentation1__c.field-meta.xml
<CustomField>
    <fullName>Federal_Documentation1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Federal Documentation</label>
    <type>Checkbox</type>
</CustomField>