force-app/main/default/objects/Reference_Core_Payroll__c/fields/Federal_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>Federal_ID_Number__c</fullName>
    <formula>Case_Lookup__r.Account.Federal_ID_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Federal ID Number</label>
    <type>Text</type>
</CustomField>