force-app/main/default/objects/Reference_Core_Payroll__c/fields/Follow_Up_Call_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Call_Scheduled__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Follow Up Call Scheduled</label>
    <type>Date</type>
</CustomField>