force-app/main/default/objects/Reference_Core_Payroll__c/fields/Follow_Up_Note__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Note__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Follow Up Note</label>
    <type>TextArea</type>
</CustomField>