force-app/main/default/objects/Reference_Core_Payroll__c/fields/Getting__c.field-meta.xml
<CustomField>
    <fullName>Getting__c</fullName>
    <description>Indicates who get information from client</description>
    <inlineHelpText>Indicates who get information from client</inlineHelpText>
    <label>Getting RAA</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>