force-app/main/default/objects/Reference_Core_Payroll__c/fields/Getting_Fed_Doc__c.field-meta.xml
<CustomField>
    <fullName>Getting_Fed_Doc__c</fullName>
    <description>Indicates who get information from client</description>
    <inlineHelpText>Indicates who get information from client</inlineHelpText>
    <label>Getting Fed. Doc</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>