force-app/main/default/objects/Reference_Core_Payroll__c/fields/Getting_Special_Pricing_Form__c.field-meta.xml
<CustomField>
    <fullName>Getting_Special_Pricing_Form__c</fullName>
    <description>Indicates who get information</description>
    <inlineHelpText>Indicates who get information</inlineHelpText>
    <label>Getting Special Pricing Form</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>