force-app/main/default/objects/Reference_Core_Payroll__c/fields/GL_Implementation_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>GL_Implementation_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GL Implementation Coordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Reference_Core_Payroll3</relationshipName>
    <type>Lookup</type>
</CustomField>