force-app/main/default/objects/Reference_Core_Payroll__c/fields/Group_C_Documents_Received__c.field-meta.xml
<CustomField>
    <fullName>Group_C_Documents_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Group C Documents Received</label>
    <type>Checkbox</type>
</CustomField>