force-app/main/default/objects/Reference_Core_Payroll__c/fields/Hire_Date_Inaccurate_Reason__c.field-meta.xml
<CustomField>
    <fullName>Hire_Date_Inaccurate_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Hire Date Inaccurate Reason</label>
    <type>TextArea</type>
</CustomField>