force-app/main/default/objects/Reference_Core_Payroll__c/fields/IS_Verified_Date__c.field-meta.xml
<CustomField>
    <fullName>IS_Verified_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IS Verified Date</label>
    <type>Date</type>
</CustomField>