force-app/main/default/objects/Reference_Core_Payroll__c/fields/Loader_Name__c.field-meta.xml
<CustomField>
    <fullName>Loader_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Loader Name</label>
    <length>35</length>
    <type>Text</type>
</CustomField>