force-app/main/default/objects/Reference_Core_Payroll__c/fields/Local_Withlding_Missing_Inaccurate__c.field-meta.xml
<CustomField>
    <fullName>Local_Withlding_Missing_Inaccurate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Local Withlding Missing/Inaccurate</label>
    <type>Checkbox</type>
</CustomField>