force-app/main/default/objects/Reference_Core_Payroll__c/fields/New_Load_Audit_Performed_by__c.field-meta.xml
<CustomField>
    <fullName>New_Load_Audit_Performed_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Load Audit Performed by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Reference_Core_Payroll4</relationshipName>
    <type>Lookup</type>
</CustomField>