force-app/main/default/objects/Reference_Core_Payroll__c/fields/No_Training_Required__c.field-meta.xml
<CustomField>
    <fullName>No_Training_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Training Required</label>
    <type>Checkbox</type>
</CustomField>