force-app/main/default/objects/Reference_Core_Payroll__c/fields/Online_Payroll_Access_Granted__c.field-meta.xml
<CustomField>
    <fullName>Online_Payroll_Access_Granted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Online Payroll Access Granted</label>
    <type>Checkbox</type>
</CustomField>