force-app/main/default/objects/Reference_Core_Payroll__c/fields/Online_User_Set_Up__c.field-meta.xml
<CustomField>
    <fullName>Online_User_Set_Up__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>First Flex Admin User Set Up</label>
    <type>Date</type>
</CustomField>