force-app/main/default/objects/Reference_Core_Payroll__c/fields/Opportunity_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Lookup</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Reference Core Payroll</relationshipLabel>
    <relationshipName>Reference_Core_Payroll</relationshipName>
    <type>Lookup</type>
</CustomField>