force-app/main/default/objects/Reference_Core_Payroll__c/fields/Organization_Structure1__c.field-meta.xml
<CustomField>
    <fullName>Organization_Structure1__c</fullName>
    <label>Organization Structure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>