force-app/main/default/objects/Reference_Core_Payroll__c/fields/POA_Inaccurate_Reason__c.field-meta.xml
<CustomField>
    <fullName>POA_Inaccurate_Reason__c</fullName>
    <description>Required State Power of Attorney(s)POA Inaccuracy Reason</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Required State Power of Attorney(s)POA Inaccuracy Reason</inlineHelpText>
    <label>POA Inaccurate Reason</label>
    <type>TextArea</type>
</CustomField>