force-app/main/default/objects/Reference_Core_Payroll__c/fields/Pre_Transition_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Pre_Transition_Email_Sent__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pre-Transition Email Sent</label>
    <type>Date</type>
</CustomField>