force-app/main/default/objects/Reference_Core_Payroll__c/fields/Prev_Return_Inaccurate_Reason__c.field-meta.xml
<CustomField>
    <fullName>Prev_Return_Inaccurate_Reason__c</fullName>
    <description>Previuos Returns inaccuracy reason</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Previuos Returns inaccuracy reason</inlineHelpText>
    <label>Prev Return Inaccurate Reason</label>
    <type>TextArea</type>
</CustomField>