force-app/main/default/objects/Reference_Core_Payroll__c/fields/Previous_Returns_Missing_Inaccurate__c.field-meta.xml
<CustomField>
    <fullName>Previous_Returns_Missing_Inaccurate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Previous Returns Missing/Inaccurate</label>
    <type>Checkbox</type>
</CustomField>